Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -50,16 +50,19 @@ body {
   max-width: 950px; /* or 950px */
 }
 
+/*@media (max-width: 480px) {*/
+  /*.imgBox { margin: 0px; }*/
+/*}*/
+/*@media (max-width: 480px) {*/
+  /*.imgBox { margin: 10px; } */
+/*}*/
+/*@media (min-width: 480px) {*/
+  /*.imgBox { margin-left: auto; margin-right: auto;}*/
+/*}*/
 
-@media (max-width: 320px) {
-  .hidden-portrait {
-    display: none !important;
-  }
+.tap-container {
+  max-width: 500px;
 }
-
-
-
-
 
 .imgBox  { 
   width:58px; 
@@ -67,6 +70,7 @@ body {
   background-size:58px 293px;
   background-image:url('../perlick.png'); 
   display: inline-block;
+  margin-top: 0px auto;
   /*margin: 20px;*/
   /*background-repeat: no-repeat;*/
 }
